--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ body > header{
     margin: 16px;
 }
 
-body > header > nav > ul>{
+body > header > nav > ul
+{
     list-style: none;
     text-decoration: none;
 }
