--- a/style.css
+++ b/style.css
@@ -1,47 +1,45 @@
-body{
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    margin: 0px;
+body {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin: 0;
     font-size: 1.5vw;
 }
 
-#logo{
-    margin: 0px;
+#logo {
+    margin: 0;
     padding: 8px;
-    font-family:"Fredoka One", sans-serif;
-    box-shadow: 8px 8px 10px 3px darkblue ;
+    font-family: "Fredoka One", sans-serif;
+    box-shadow: 8px 8px 10px 3px darkblue;
     width: 16%;
 }
 
-ul{
-    margin: 0px;
+ul {
+    margin: 0;
+    padding: 0;
 }
 
-body > header{
-
+body > header {
     background-color: burlywood;
     color: blue;
-    display: flex ;
+    display: flex;
     height: 12vh;
     align-items: center;
     justify-content: space-around;
 }
 
-#nav-ul{
+#nav-ul {
     display: flex;
 }
 
-#nav-ul>li{
+#nav-ul > li {
     padding: 8px;
     margin: 16px;
 }
 
-body > header > nav > ul
-{
+body > header > nav > ul {
     list-style: none;
-    text-decoration: none;
 }
 
-.navbutton{
+.navbutton {
     color: white;
     text-decoration: none;
     padding: 12px;
@@ -49,7 +47,7 @@ body > header > nav > ul
     border-radius: 10%;
 }
 
-body>main article{
+body > main article {
     width: 70%;
     margin: auto;
 }
@@ -60,38 +58,36 @@ body>main article{
 }
 
 #main-content > div {
-
     width: 70%;
 }
 
-form{
-text-align: center;
-}
-
-h2{
+form {
     text-align: center;
 }
-body > footer{
+
+h2 {
+    text-align: center;
+}
+
+body > footer {
     background-color: aqua;
     display: flex;
 }
 
-img{
+img {
     border-radius: 50%;
 }
 
-#footer-ul{
+#footer-ul {
     display: flex;
     list-style: none;
 }
 
-#footer-ul>div>li{
+#footer-ul > div > li {
     margin-left: 12px;
-    
 }
 
-#footer-ul>div>li>a{
+#footer-ul > div > li > a {
     text-decoration: none;
     color: beige;
-
 }
