--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin: 0;
-    font-size: 1.5vw;
+    font-size: 1.5rem; /* Changed from vw to rem for more predictable scaling */
 }
 
 #logo {
@@ -28,15 +28,14 @@ body > header {
 
 #nav-ul {
     display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 #nav-ul > li {
     padding: 8px;
     margin: 16px;
-}
-
-body > header > nav > ul {
-    list-style: none;
 }
 
 .navbutton {
@@ -72,6 +71,9 @@ h2 {
 body > footer {
     background-color: aqua;
     display: flex;
+    flex-direction: column; /* Assuming footer items are stacked vertically */
+    align-items: center; /* Center items horizontally */
+    padding: 20px; /* Optional padding */
 }
 
 img {
@@ -81,13 +83,15 @@ img {
 #footer-ul {
     display: flex;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-#footer-ul > div > li {
+#footer-ul > li {
     margin-left: 12px;
 }
 
-#footer-ul > div > li > a {
+#footer-ul > li > a {
     text-decoration: none;
     color: beige;
 }
